add GetUserBalance in goa design
