# internal/gen/http/openapi.yaml
@@ -32,6 +32,51 @@ paths:
                     description: Internal Server Error response.
             schemes:
                 - http
+    /user/balance:
+        get:
+            tags:
+                - balance
+            summary: GetUserBalance balance
+            description: Get user balance
+            operationId: balance#GetUserBalance
+            parameters:
+                - name: Authorization
+                  in: header
+                  description: A JWT token used to authenticate a request
+                  required: true
+                  type: string
+            responses:
+                "200":
+                    description: OK response.
+                    schema:
+                        $ref: '#/definitions/BalanceGetUserBalanceResponseBody'
+                "401":
+                    description: Missing or empty Authorization header
+                    headers:
+                        goa-attribute-fault:
+                            description: Is the error a server-side fault?
+                            type: boolean
+                        goa-attribute-id:
+                            description: ID is a unique identifier for this particular occurrence of the problem.
+                            type: string
+                        goa-attribute-message:
+                            description: Message is a human-readable explanation specific to this occurrence of the problem.
+                            type: string
+                        goa-attribute-name:
+                            description: Name is the name of this class of errors.
+                            type: string
+                        goa-attribute-temporary:
+                            description: Is the error temporary?
+                            type: boolean
+                        goa-attribute-timeout:
+                            description: Is the error a timeout?
+                            type: boolean
+                "500":
+                    description: Internal Server Error response.
+            schemes:
+                - http
+            security:
+                - jwt_header_Authorization: []
     /user/login:
         post:
             tags:
@@ -199,34 +244,49 @@ paths:
             schemes:
                 - http
 definitions:
+    BalanceGetUserBalanceResponseBody:
+        title: BalanceGetUserBalanceResponseBody
+        type: object
+        properties:
+            current:
+                type: integer
+                example: 9550999508649145278
+                format: int64
+            withdrawn:
+                type: integer
+                example: 7867690860693954692
+                format: int64
+        example:
+            current: 500.5
+            withdrawn: 42
     GetOrderResult:
         title: GetOrderResult
         type: object
         properties:
             accrual:
                 type: integer
-                example: 839832540227140899
+                example: 3503113434322654538
                 format: int64
             order:
                 type: string
-                example: Voluptate et.
+                example: Accusamus laborum ipsam consequuntur sed repellat temporibus.
             status:
                 type: string
-                example: Maxime sequi qui accusamus aperiam rem.
+                example: Consequatur porro assumenda.
         example:
-            accrual: 2402250044807314231
-            order: Magnam odit accusamus.
-            status: Ipsam consequuntur sed repellat temporibus sit consequatur.
+            accrual: 14526632522361058921
+            order: Asperiores consequuntur.
+            status: Ut et.
     LoginPassword:
         title: LoginPassword
         type: object
         properties:
             login:
                 type: string
-                example: Ratione sit asperiores consequuntur.
+                example: Distinctio magnam sint odit provident iure dolor.
             password:
                 type: string
-                example: Ut et.
+                example: Eius cumque illum saepe.
         example:
             login: <login>
             password: <password>
@@ -239,15 +299,15 @@ definitions:
         properties:
             accrual:
                 type: integer
-                example: 17975470654812843867
+                example: 12350357834875655296
                 format: int64
             number:
                 type: string
-                example: "952"
+                example: "2"
                 pattern: '[1-9][0-9]*'
             status:
                 type: string
-                example: NEW
+                example: PROCESSED
                 enum:
                     - NEW
                     - PROCESSING
@@ -255,13 +315,13 @@ definitions:
                     - PROCESSED
             uploaded_at:
                 type: string
-                example: "2000-07-22T18:51:51Z"
+                example: "1983-03-11T15:00:48Z"
                 format: date-time
         example:
-            accrual: 786640818561411755
-            number: "772"
-            status: PROCESSING
-            uploaded_at: "1976-11-16T10:53:37Z"
+            accrual: 4533046461382450590
+            number: "499"
+            status: INVALID
+            uploaded_at: "1987-06-09T19:59:59Z"
         required:
             - number
             - status
